fixed vertical spacing

--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,8 @@ button {
   margin-top: 0.5vh;
 }
 .imageContainer {
-  height: 25vh;
-  width: 17vw;
+  height: 20%;
+  width: 15%;
   padding-left: 0.4vw;
   padding-right: 0.4vw;
   padding-top: 0;
